--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
 
-
     <nav> 
             
         <div class = "Title">
@@ -25,7 +24,7 @@
 
         <div class = "pages">
 
-            <a href="index.html">Home</a>
+            <a class="current" href="index.html">Home</a>
             <a href="ForSale.html">ShowRoom</a>
             <a href="SellCar.html">Sell Car</a>
             <a href="Services.html">Services</a>
@@ -48,6 +47,23 @@
        
 
     </nav>
+
+    <video src ="FrontPageVidSmaller.mp4" autoplay loop muted></video>
+
+    <div class="home-container">
+        <a href="ForSale.html">
+            Check out our newest cars!
+            <img src="CarPictures/car9.png" alt="Newest Cars">
+        </a>
+        <a href="SellCar.html">
+            Looking to sell a classic car?
+            <img src="CarPictures/car8.png" alt="Sell Your Car">
+        </a>
+        <a href="Services.html">
+            Interested in our services?
+            <img src="servicespics/service1.png" alt="Ceramic Coating">
+        </a>
+    </div>
 
 <body>
 
