--- a/ForSale.html
+++ b/ForSale.html
@@ -4,6 +4,9 @@
     <head>
         
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <meta charset="utf-8">
 		<title>My first three.js app</title>
 
