semi-working mobile port
set up style rules for mobile view

--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <style>
-        body { margin: 0; }
+        body { margin: 0; overflow: hidden;}
     </style>
     
 </head>
 <body>
 
-    <nav> 
+    <nav class = "lock-body">
             
         <div class = "Title">
 
@@ -68,6 +71,6 @@
         </a>
     </div>
 
-<body>
+</body>
 
 </html> 
