Nav Bar Bug Mobile

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <style>
-        body { margin: 0; overflow: hidden;}
+        body { margin: 0;}
     </style>
     
 </head>
-<body>
+<body class = "lock-body">
 
-    <nav class = "lock-body">
+    <nav>
             
         <div class = "Title">
 
