--- a/SellCar.html
+++ b/SellCar.html
@@ -89,7 +89,7 @@
         </form>
 
         <div class ="SellCarImage">
-            <img src="CarPictures/car8.png" alt="Car" width= "600" height="450">
+            <img src="CarPictures/car8.png" alt="Car" >
        </div> 
 
 
