--- a/Services.html
+++ b/Services.html
@@ -139,7 +139,7 @@
     
     </div>
     <div class="service2">
-        <img src="servicespics/service2.png" alt="Service 2" width="500" height="300">
+        <img src="servicespics/service2.png" alt="Service 2" >
     </div>
 <body>
 
