--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
         <div class="socials">
 
-            <a href="https://www.tiktok.com/" target="_blank">
+            <a href="https://www.tiktok.com/@shane_zx?_t=ZT-8unPaakwSFC&_r=1" target="_blank">
                 <img src="Socials/TikTok.png" alt="TikTok" width="40" height="40">
             </a>
-            <a href="https://www.instagram.com/" target="_blank">
+            <a href="https://www.instagram.com/shane_zx_?igsh=c2U1N2sxaTF5NWp0" target="_blank">
                 <img src="Socials/Instagram.png" alt="Instagram" width="40" height="40">
             </a>
 
